--- a/ODataProductsV4.html
+++ b/ODataProductsV4.html
@@ -81,8 +81,8 @@
 	<body id="dt_example">
 
 		<div id="container">
-			<a href="index.html">Home</a>
-			<a href="http://code.google.com/p/jquery-datatables-column-filter/wiki/ColumnFilter">Wiki</a> 
+			<!--<a href="index.html">Home</a>
+			<a href="http://code.google.com/p/jquery-datatables-column-filter/wiki/ColumnFilter">Wiki</a> -->
 			<div class="full_width big">
 				JQuery DataTables OData
 			</div>
@@ -131,11 +131,36 @@
 			<div class="spacer"></div>
 	
 			<h1>Initialization code</h1>
-			<p>Initialization code is very simple. </p>
+			<p>Initialization code is very simple. Just specify "fnServerOData" value for "fnServerData" parameter, and define oData service version in "iODataVersion" parameter.</p>
 			<pre>
-			$(document).ready( function () {		
-			
+$(document).ready( function () {		
+	$('#products1').dataTable({			
+		"sPaginationType": "full_numbers",
+		"aLengthMenu": [[2, 5, 10, -1], ["Two", "Five", "Ten", "All"]],
+		"bProcessing": true,
+		"bServerSide": true,
+		"sAjaxSource": "http://services.odata.org/V4/OData/OData.svc/Products",
+		"aoColumns": [
+			{ mData: "Name" },
+			{ mData: "Description" },
+			{ mData: "Rating", sType: 'numeric' },
+			{ mData: "Price", sType: 'numeric' },
+			{ sName: "ReleaseDate", sType: 'date',
+			  mData: function(source, type, val) {
+					if (source.ReleaseDate.indexOf("/Date") > -1) {
+						var temp = source.ReleaseDate.substring(6, source.ReleaseDate.length - 2);
+						return new Date(Number(temp));
+					}
+					return source.ReleaseDate;
+				}
+			  
 			}
+		],
+		"fnServerData": fnServerOData,
+		"iODataVersion": 4,
+		"bUseODataViaJSONP": true
+	});
+}
 			</pre>
 			
 			<h1>Other examples</h1>
@@ -147,7 +172,7 @@
 			
 			<div id="footer" style="text-align:center;">
 				<span style="font-size:10px;">
-					DataTables OData Add-on &copy; Jovan Popovic 2014.<br>
+					DataTables OData Add-on &copy; Jovan & Vida Popovic 2014.<br>
 					DataTables designed and created by <a href="http://www.sprymedia.co.uk">Allan Jardine</a> &copy; 2007-2014<br>
 				</span>
 			</div>
