Case insensitive searches

--- a/ODataProductsV2.html
+++ b/ODataProductsV2.html
@@ -110,8 +110,7 @@
 				<h2>With OData Service as server-side processing logic</h2>
 				<p>Filtering on numeric/datetime columns does not work, because there is no efficient way to search by these types using OData URL query.
 				These columns should be marked as numeric or date with sType parameter in DataTable initialization in order to avoid exception that will be thrown
-				by OData service.
-				Search by text columns is case sensitive because this is the way how it is handled by OData service.</p> 
+				by OData service.</p> 
 				<table cellpadding="0" cellspacing="0" border="0" class="display" id="products1">
 					<thead>
 						<tr>
@@ -186,7 +185,7 @@ $(document).ready( function () {
 			
 			<div id="footer" style="text-align:center;">
 				<span style="font-size:10px;">
-					DataTables OData Add-on &copy; Jovan Popovic 2014.<br>
+					DataTables OData Add-on &copy; Jovan & Vida Popovic 2014.<br>
 					DataTables designed and created by <a href="http://www.sprymedia.co.uk">Allan Jardine</a> &copy; 2007-2014<br>
 				</span>
 			</div>
