--- a/ODataProductsV4.html
+++ b/ODataProductsV4.html
@@ -96,8 +96,7 @@
 				<h2>With OData Service as server-side processing logic</h2>
 				<p>Filtering on numeric/datetime columns does not work, because there is no efficient way to search by these types using OData URL query.
 				These columns should be marked as numeric or date with sType parameter in DataTable initialization in order to avoid exception that will be thrown
-				by OData service.
-				Search by text columns is case sensitive because this is the way how it is handled by OData service.</p> 
+				by OData service.</p> 
 				<table cellpadding="0" cellspacing="0" border="0" class="display" id="products1">
 					<thead>
 						<tr>
