--- a/ODataProductsV2.html
+++ b/ODataProductsV2.html
@@ -95,8 +95,9 @@
 	<body id="dt_example">
 
 		<div id="container">
-		<!--<a href="index.html">Home</a>
-			<a href="http://code.google.com/p/jquery-datatables-column-filter/wiki/ColumnFilter">Wiki</a>-->
+		    <a href="http://vpllan.github.io/jQuery.dataTables.oData/">Home</a>
+			<a href="https://github.com/vpllan/jQuery.dataTables.oData/wiki">Wiki</a>
+			
 			<div class="full_width big">
 				JQuery DataTables OData
 			</div>
