--- a/ODataProductsV2.html
+++ b/ODataProductsV2.html
@@ -1,10 +1,10 @@
-﻿ <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<link rel="shortcut icon" type="image/ico" href="http://www.sprymedia.co.uk/media/images/favicon.ico">
 		
-		<title>Using DataTable with column filter plugin - Basic Example</title>
+		<title>Using dataTable with OData connector</title>
 		<style type="text/css" title="currentStyle">
 			@import "media/css/demo_page.css";
 			@import "media/css/demo_table.css";
@@ -145,7 +145,7 @@
 			<div class="spacer"></div>
 
 			<h1>Initialization code</h1>
-			<p>Initialization code is very simple. Just specify "fnServerOData" value for "fnServerData" parameter, and define oData service version in "iODataVersion" parameter.</p>
+			<p>Initialization code is very simple. Just specify "fnServerOData" value for "fnServerData" parameter, and define OData service version in "iODataVersion" parameter.</p>
 			<pre>
 $(document).ready( function () {
 	$('#products1').dataTable({
@@ -179,9 +179,9 @@ $(document).ready( function () {
 			
 			<h1>Other examples</h1>
 			<ul>
-				<li><a href="ODataProductsV4.html">Example for oData v4</a></li>
-				<li><a href="ODataProductsV3.html">Example for oData v3</a></li>
-				<li><a href="ODataProductsV2.html">Example for oData v2</a></li>
+				<li><a href="ODataProductsV4.html">Example for OData v4</a></li>
+				<li><a href="ODataProductsV3.html">Example for OData v3</a></li>
+				<li><a href="ODataProductsV2.html">Example for OData v2</a></li>
 			</ul>
 			
 			<div id="footer" style="text-align:center;">
