Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Jquery.datatables.odata : oData jQuery dataTables" />
+    <meta name="description" content="Jquery.datatables.odata : OData jQuery dataTables" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/vpllan/jQuery.dataTables.oData">View on GitHub</a>
 
           <h1 id="project_title">Jquery.datatables.odata</h1>
-          <h2 id="project_tagline">oData jQuery dataTables</h2>
+          <h2 id="project_tagline">OData jQuery dataTables</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/vpllan/jQuery.dataTables.oData/zipball/master">Download this project as a .zip file</a>
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="jquery-datatables-odata-connector" class="anchor" href="#jquery-datatables-odata-connector"><span class="octicon octicon-link"></span></a>jQuery DataTables oData connector</h1>
+<a name="jquery-datatables-odata-connector" class="anchor" href="#jquery-datatables-odata-connector"><span class="octicon octicon-link"></span></a>jQuery DataTables OData connector</h1>
 
 <p>jQuery DataTables OData connector enables standard jQuery DataTables plugin to display data provided by OData service.
 Beside displaying, it allows you to filter, sort, and navigate through the data. There are several versions of OData services (v4, v3, and v2), which return results in different formats. This connector 
